# email-forward-parser-py

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: workflow.yml
emailforwardparser/: client.py  forward_parser.py  loop.py  regexs.py  utils.py
tests/: client_test.py  coverage_edges_test.py  forward_parser_test.py
