[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-forward-parser"
version = "0.1.3"
description = "Python Library to parse forwarded email messages"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["email", "forwarded-email", "parser", "eml", "mime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Communications :: Email",
    "Topic :: Text Processing",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black>=25",
    "isort>=6",
    "mypy>=1.19",
    "ruff>=0.14",
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.urls]
Homepage = "https://github.com/felipehertzer/email-forward-parser-py"
Repository = "https://github.com/felipehertzer/email-forward-parser-py"
Issues = "https://github.com/felipehertzer/email-forward-parser-py/issues"

[tool.pytest.ini_options]
addopts = [
    "--cov=emailforwardparser",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["emailforwardparser"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
files = ["emailforwardparser", "tests"]
pretty = true
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[tool.hatch.build.targets.wheel]
packages = ["emailforwardparser"]
